# game-arch-test

./: .gitignore  .pre-commit-config.yaml  Cargo.toml
.github/workflows/: check-and-lint.yaml  test.yaml
src/: main.rs
src/context/: common.rs  draw.rs  event.rs  init.rs  main.rs  mod.rs  update.rs
src/display/: mod.rs
src/events/: mod.rs
src/exec/: dispatch.rs  executor.rs  main_ctx.rs  mod.rs  task.rs
src/exec/runner/: container.rs  mod.rs
src/exec/server/: audio.rs  draw.rs  mod.rs  update.rs
src/executor/: mod.rs
src/executor/server/: audio.rs  draw.rs  mod.rs
src/graphics/: blur.rs  context.rs  debug_callback.rs  mod.rs  quad.wgsl  quad_renderer.rs  transform_stack.rs  tree.rs
src/graphics/wrappers/: buffer.rs  framebuffer.rs  mod.rs  shader.rs  texture.rs  vertex_array.rs
src/scene/: mod.rs
src/scene/draw/: bg.rs  clear.rs  mod.rs
src/scene/draw/content/: bg.rs  mod.rs
src/scene/main/: bg.rs  handle_resize.rs  mod.rs
src/scene/main/content/: bg.rs  mod.rs
src/scene/main/content/ui/: mod.rs  settings.rs
src/scene/main/core/: clear.rs  mod.rs  redraw.rs  surface_creation.rs
src/scene/main/test/: headless.rs  mod.rs  timeout_delay.rs
src/scene/main/test/ui/: linear_box.rs  mod.rs  stack.rs
src/scene/main/utility/: close.rs  error.rs  freq_profile.rs  mod.rs  update_delay_test.rs  vsync.rs
src/test/: assert.rs  manager.rs  mod.rs  result.rs  tree.rs
src/ui/: common.rs  event.rs  mod.rs
src/ui/containers/: center.rs  linear_box.rs  mod.rs  offbox.rs  stack.rs
src/ui/controls/: debug_rect.rs  focus.rs  mod.rs  slider.rs
src/ui/scenes/: center_test.rs  mod.rs
src/ui/utils/: geom.rs  helpers.rs
src/utils/: args.rs  clock.rs  debug_handle.rs  enclose.rs  error.rs  frequency_runner.rs  has_metric.rs  log.rs  mod.rs  mpsc.rs  mutex.rs  send_sync.rs  sync.rs  uid.rs
