[package]
name = "game-arch-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.0.32", features = ["derive"] }
derivative = "2.2.0"
executors = "0.9.0"
fern = { version = "0.6.1", features = ["colored"] }
flume = "0.10.14"
futures = "0.3.25"
gl = "0.14.0"
glsl-layout = { version = "0.5.0", features = ["cgmath"] }
glutin = "0.30.3"
glutin-winit = "0.2.1"
image = "0.24.5"
rand = "0.8.5"
raw-window-handle = "0.5.0"
sendable = "0.6.1"
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
winit = "0.27.5"
