[package]
name = "game-arch-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
bitflags = "1.3.2"
bytemuck = { version = "1.13.1", features = ["derive"] }
clap = { version = "4.3.11", features = ["derive"] }
derivative = "2.2.0"
derive_more = "0.99.17"
executors = "0.9.0"
flume = "0.10.14"
glam = { version = "0.22.0", features = ["bytemuck"] }
image = "0.24.5"
parking_lot = "0.12.1"
pollster = "0.3.0"
rand = "0.8.5"
raw-window-handle = "0.5.0"
smallvec = "1.10.0"
static_assertions = "1.1.0"
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
trait-set = "0.3.0"
wgpu = "0.16.1"
winit = "0.29.0-beta.0"
